refactoring _map method

--- a/example/hs/index.html
+++ b/example/hs/index.html
@@ -15,6 +15,9 @@
         <span class="hey">
             <span class="name">it</span> <span class="age">0</span>
         </span>
+        <span class="hey">
+            <span class="name">there</span> <span class="age">-</span>
+        </span>
     </div>
   </body>
 </html>
