refactoring _map method

--- a/example/hs/index.html
+++ b/example/hs/index.html
@@ -1,13 +1,6 @@
 <html>
   <body>
-    <div id="a">
-        <span class="hey">
-            <span class="name">you</span> <span class="age">~</span>
-        </span>
-        <span class="hey">
-            <span class="name">it</span> <span class="age">0</span>
-        </span>
-    </div>
+    <div id="a">a goes here</div>
     <div id="b">
         <span class="hey">
             <span class="name">you</span> <span class="age">~</span>
@@ -19,5 +12,6 @@
             <span class="name">there</span> <span class="age">-</span>
         </span>
     </div>
+    <div id="c">c goes here</div>
   </body>
 </html>
