added _mapappend method

--- a/example/hs/index.html
+++ b/example/hs/index.html
@@ -1,16 +1,16 @@
 <html>
   <body>
-    <div id="a">a goes here</div>
+    <div id="a"><h1>a goes here</h1></div>
     <div id="b">
-        <span class="hey">
-            <span class="name">you</span> <span class="age">~</span>
-        </span>
-        <span class="hey">
-            <span class="name">it</span> <span class="age">0</span>
-        </span>
-        <span class="hey">
-            <span class="name">there</span> <span class="age">-</span>
-        </span>
+        <div class="row">
+            <span class="name">one</span> <span class="age">1</span>
+        </div>
+        <div class="row">
+            <span class="name">two</span> <span class="age">2</span>
+        </div>
+        <div class="row">
+            <span class="name">three</span> <span class="age">3</span>
+        </div>
     </div>
     <div id="c">c goes here</div>
   </body>
