updated _map, _mapappend, and _mapprepend methods

--- a/example/hs/index.html
+++ b/example/hs/index.html
@@ -1,7 +1,13 @@
 <html>
+  <head>
+    <title>hey you</title>
+    <link rel="stylesheet" type="text/css" href="main.css">
+    <meta charset="UTF-8">
+  </head>
   <body>
     <div id="a"><h1>a goes here</h1></div>
     <div id="b">
+        <h4>header goes here</h4>
         <div class="row">
             <span class="name">one</span> <span class="age">1</span>
         </div>
