--- a/example/hs/index.html
+++ b/example/hs/index.html
@@ -1,23 +1,26 @@
 <html>
   <head>
     <title>hey you</title>
+    <script src="main.js"></script>
     <link rel="stylesheet" type="text/css" href="main.css">
     <meta charset="UTF-8">
   </head>
   <body>
     <div id="a"><h1>a goes here</h1></div>
-    <div id="b">
-        <h4>header goes here</h4>
-        <div class="row">
-            <span class="name">one</span> <span class="age">1</span>
-        </div>
-        <div class="row">
-            <span class="name">two</span> <span class="age">2</span>
-        </div>
-        <div class="row">
-            <span class="name">three</span> <span class="age">3</span>
-        </div>
-    </div>
+    <table id="b">
+        <tr class="row">
+            <td class="name">one</td> <td class="age">1</td>
+            <td class="tda">console.log('hey')</td>
+        </tr>
+        <tr class="row">
+            <td class="name">two</td> <td class="age">2</td>
+            <td class="tda">console.log('hey2')</td>
+        </tr>
+        <tr class="row">
+            <td class="name">three</td> <td class="age">3</td>
+            <td class="tda">console.log('hey3')</td>
+        </tr>
+    </table>
     <div id="c">c goes here</div>
   </body>
 </html>
